syntax = "proto2";

option cc_enable_arenas = true;

package c2017.magazine;

message MagazineStatus {
  required uint64 timestamp = 1;
  required bool has_gear = 2;
  required bool current_spiked = 3;
  required bool is_running = 4;
}

message MagazineInput {
  required uint64 timestamp = 1;
  required bool has_hp_gear = 2; // senses distance using proximity sensor to know if there is a gear
}

message MagazineOutput {
  required uint64 timestamp = 1;
  required bool gear_intake_covered = 2;
  required bool magazine_extended = 3;
  required bool gear_shutter_open = 4;
  required double upper_voltage = 5;
  required double side_voltage = 6;
}

enum HPIntakeGoalState {
  NONE = 0;
  BALLS = 1;
  GEAR = 2;
  BOTH = 3;
}

enum UpperGoalState {
  UPPER_IDLE = 0;
  UPPER_FORWARD = 1;
  UPPER_BACKWARD = 2;
}

enum SideGoalState {
  SIDE_IDLE = 0;
  SIDE_PULL_IN = 1;
  SIDE_AGITATE = 2;
}

message MagazineGoal {
  required uint64 timestamp = 1;
  required HPIntakeGoalState hp_intake_goal = 2;
  required UpperGoalState upper_goal = 3;
  required bool score_gear = 4;
  required bool magazine_extended = 5;
  required SideGoalState side_goal = 6;
}
