syntax = "proto2";

option cc_enable_arenas = true;

package c2017.shooter_group;

message ShooterGroupGoal {
  enum Position {
    NONE = 0;
    FENDER = 1;
    HOPPER = 2;
  }
  enum Wheel {
    IDLE = 0;
    SPINUP = 1;
    SHOOT = 2;
  }

  required uint64 timestamp = 1;
  required Position positon = 2;
  required Wheel wheel = 3;
}

