syntax = "proto2";

package c2019.superstructure;

option cc_enable_arenas = true;

enum SuperstructureState {
  CALIBRATING = 0;
  HOLDING = 1;
  INTAKING_WRIST = 2;
  INTAKING_GROUND = 3;
  INTAKING_TO_STOW = 4;
}

enum IntakeGoal {
  INTAKE_NONE = 0;
  INTAKE_HATCH = 1;
  INTAKE_GROUND_HATCH = 2;
  INTAKE_CARGO = 3;
  OUTTAKE_HATCH = 4;
  OUTTAKE_GROUND_HATCH = 5;
  OUTTAKE_CARGO = 6;
  POP = 7;
  PREP_HANDOFF = 8;
  PREP_SCORE = 9;
}

enum ScoreGoal {
  NONE = 0;
  CARGO_ROCKET_FIRST = 1;
  CARGO_ROCKET_BACKWARDS = 2;
  CARGO_ROCKET_SECOND = 3;
  CARGO_ROCKET_THIRD = 4;
  CARGO_SHIP_FORWARDS = 5;
  CARGO_SHIP_BACKWARDS = 6;
  HATCH_ROCKET_FIRST = 7;
  HATCH_ROCKET_BACKWARDS = 8;
  HATCH_ROCKET_SECOND = 9;
  HATCH_ROCKET_THIRD = 10;
  HATCH_SHIP_FORWARDS = 12;
  HATCH_SHIP_BACKWARDS = 13;
  HANDOFF = 14;
  STOW = 15;
  CARGO_GROUND = 16;
  CLIMB = 17;
  DROP_FORKS = 18;
  DROP_CRAWLERS = 19;
  KISS = 20;
  CRAWL = 21;
  CRAWL_BRAKED = 22;
  BRAKE = 23;
  WINCH = 24;
  LIMELIGHT_OVERRIDE = 25;
  LAND = 26;
}

enum GroundHatchIntakeState {
  GROUND_HATCH_IDLE = 0;
  GROUND_HATCH_INTAKING = 1;
  GROUND_HATCH_PICKING_UP = 2;
  GROUND_HATCH_CARRYING = 3;
  GROUND_HATCH_OUTTAKING = 4;
}

enum HatchIntakeState {
  HATCH_IDLE = 0;
  HATCH_INTAKING = 1;
  HATCH_CARRYING = 2;
  HATCH_OUTTAKING = 3;
  HATCH_PREPPING_SCORE = 4;
  HATCH_HANDOFF_INTAKING = 5;
}

enum CargoIntakeState {
  CARGO_IDLE = 0;
  CARGO_INTAKING = 1;
  CARGO_PICKING_UP = 2;
  CARGO_HOLDING = 3;
  CARGO_OUTTAKING = 4;
}

enum ClimbType {
  CLIMB_NONE = 0;
  SOLO = 1;
  BUDDY = 2;
}

message SuperstructureStatus {
  required uint64 timestamp = 1;
  required SuperstructureState state = 2;
  required double elevator_height = 3;
  required bool elevator_is_calibrated = 4;
  required double elevator_velocity = 5;
  required bool elevator_at_top = 6;
  required double elevator_goal = 7;
  required bool elevator_encoder_fault_detected = 8;
  required bool braked = 9;
  required double wrist_angle = 10;
  required bool wrist_is_calibrated = 11;
  required double wrist_voltage = 12;
  required double wrist_goal = 13;
  required bool wrist_encoder_fault = 14;
  required double wrist_velocity = 15;
  required GroundHatchIntakeState ground_hatch_intake_state = 16;
  required bool has_ground_hatch = 18;
  required HatchIntakeState hatch_intake_state = 19;
  required bool has_hp_hatch = 20;
  required CargoIntakeState cargo_intake_state = 21;
  required ClimbType climb_type = 22;
  required bool climb = 23;
  required double winch_current = 24;
  required bool has_cargo = 25;
}

message SuperstructureInput {
  required uint64 timestamp = 1;
  required bool hatch_intake_proxy = 2;
  required double cargo_current = 3;
  required double hatch_ground_current = 4;
  required double elevator_encoder = 5;
  required double wrist_encoder = 6;
  required bool elevator_zeroed = 7;
  required bool wrist_hall = 8;
  required double wrist_current = 9;
  required double elevator_current = 10;
  required double wrist_voltage = 11;
  required double elevator_voltage = 12;
  required bool cargo_proxy = 13;
  required bool elevator_hall = 14;
  required bool wrist_zeroed = 15;
  required double elevator_absolute = 16;
}

message SuperstructureGoal {
  required uint64 timestamp = 1;
  required ScoreGoal score_goal = 2;
  required IntakeGoal intake_goal = 3;
  required double elevator_god_mode_goal = 4;
  required double wrist_god_mode_goal = 5;
  required bool elevator_brake = 6;
  required bool manual_left_winch = 22;
  required bool manual_right_winch = 23;
}

enum TalonOutput {
  OPEN_LOOP = 0;
  POSITION = 1;
}

message SuperstructureOutput {
  required uint64 timestamp = 1;
  required TalonOutput elevator_setpoint_type = 2;
  required TalonOutput wrist_setpoint_type = 3;
  required double elevator_setpoint = 4;
  required double wrist_setpoint = 5;
  required double elevator_setpoint_ff = 6;
  required double wrist_setpoint_ff = 7;
  required bool arrow_solenoid = 8;
  required bool backplate_solenoid = 9;
  required double cargo_roller_voltage = 10;
  required double hatch_roller_voltage = 11;
  required bool snap_down = 12;
  required double left_winch_voltage = 13;
  required double right_winch_voltage = 14;
  required bool drop_forks = 15;
  required bool elevator_high_gear = 16;
  required bool crawler_one_solenoid = 17;
  required bool crawler_two_solenoid = 18;
  required double crawler_voltage = 19;
  required bool brake = 20;
  required bool cargo_out = 21;
  required bool climbing = 22;
  required bool pins = 23;
}
